name: OpenAL
version: 1.5.0.0
license: BSD3
license-file: LICENSE
maintainer: Sven Panne <svenpanne@gmail.com>, Stephen Blackheath <haskell.openal.stephen@blacksapphire.com>
bug-reports: https://github.com/haskell-openal/ALUT/issues
homepage: https://github.com/haskell-openal/ALUT
category: Sound
synopsis: A binding to the OpenAL cross-platform 3D audio API
description:
        A Haskell binding for the OpenAL cross-platform 3D audio API,
        appropriate for use with gaming applications and many other
        types of audio applications.  For more information about OpenAL,
        please see: <http://connect.creativelabs.com/openal/>.
build-type: Configure
cabal-version:  >= 1.6
extra-source-files:
        OpenAL.buildinfo.in
        README
        aclocal.m4
        config.guess
        config.sub
        configure
        configure.ac
        examples/test/TestDevice.hs
        include/HsOpenAL.h.in
        include/HsOpenALConfig.h.in
        install-sh
extra-tmp-files:
        config.log
        config.status
        autom4te.cache
        OpenAL.buildinfo
        include/HsOpenALConfig.h
        include/HsOpenAL.h
library
    exposed-modules:
            Sound.OpenAL,
            Sound.OpenAL.AL,
            Sound.OpenAL.AL.ALboolean,
            Sound.OpenAL.AL.Attenuation,
            Sound.OpenAL.AL.BasicTypes,
            Sound.OpenAL.AL.Buffer,
            Sound.OpenAL.AL.BufferInternal,
            Sound.OpenAL.AL.Doppler,
            Sound.OpenAL.AL.Errors,
            Sound.OpenAL.AL.Extensions,
            Sound.OpenAL.AL.Format,
            Sound.OpenAL.AL.Listener,
            Sound.OpenAL.AL.Source,
            Sound.OpenAL.AL.StringQueries,
            Sound.OpenAL.ALC,
            Sound.OpenAL.ALC.BasicTypes,
            Sound.OpenAL.ALC.Capture,
            Sound.OpenAL.ALC.Context,
            Sound.OpenAL.ALC.Device,
            Sound.OpenAL.ALC.Errors,
            Sound.OpenAL.ALC.Extensions
    other-modules:
            Sound.OpenAL.AL.PeekPoke,
            Sound.OpenAL.AL.QueryUtils,
            Sound.OpenAL.AL.SourceState,
            Sound.OpenAL.AL.String,
            Sound.OpenAL.ALC.ALCboolean,
            Sound.OpenAL.ALC.QueryUtils,
            Sound.OpenAL.ALC.String,
            Sound.OpenAL.Config,
            Sound.OpenAL.Constants
    include-dirs: include
    includes: HsOpenAL.h
    install-includes: HsOpenAL.h
    ghc-options: -Wall
    build-depends: base >= 3 && < 5, OpenGL >= 2.9.0.0
    extensions: CPP, ForeignFunctionInterface

source-repository head
  type: git
  location: https://github.com/haskell-openal/ALUT
